# praises

./: .gitignore  LICENSE  README.md  README.zh-CN.md  components.d.ts  eslint.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.vue  event.ts  main.ts  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  cmd.rs  config.rs  constants.rs  event.rs  hotkeys.rs  lib.rs  main.rs  tray.rs  window.rs
src-tauri/src/libs/: audio.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/tts/: azure.rs  mod.rs  msedge.rs  qwen.rs  tiktok.rs  windows.rs
src/assets/icons/iep/: microphone.vue  settings.vue
src/components/Footer/: index.vue
src/components/Header/: index.vue
src/components/SideBar/: index.vue
src/components/TitleBar/: index.vue
src/lib/: azure.ts  windows.ts
src/locales/: i18n.ts  index.ts  typing.ts
src/locales/langs/: en-US.json  zh-CN.json
src/router/: index.ts
src/server/tts/: types.ts
src/server/tts/api/: azure.ts  edge.ts
src/server/tts/state/: index.ts
src/store/: config.ts  index.ts  setting.ts  tts.ts
src/store/modules/: audio.ts
src/utils/: constants.ts  index.ts  store.ts
src/utils/options/languages/: afZA.ts  amET.ts  arAE.ts  arBH.ts  arDZ.ts  arEG.ts  arIQ.ts  arJO.ts  arKW.ts  arLB.ts  arLY.ts  arMA.ts  arOM.ts  arQA.ts  arSA.ts  arSY.ts  arTN.ts  arYE.ts  asIN.ts  azAZ.ts  bgBG.ts  bnBD.ts  bnIN.ts  bsBA.ts  caES.ts  csCZ.ts  cyGB.ts  daDK.ts  deAT.ts  deCH.ts  deDE.ts  elGR.ts  enAU.ts  enCA.ts  enGB.ts  enHK.ts  enIE.ts  enIN.ts  enKE.ts  enNG.ts  (+112 more)
src/views/ConfigView/: index.vue
src/views/HomeView/: index.vue
src/views/HomeView/components/: Main.vue
src/views/MainView/: index.vue
src/views/SettingView/: index.vue
src/views/SettingView/components/: AzureSetting.vue  Common.vue  QwenSetting.vue
src/views/TTSView/: index.vue
src/views/TTSView/components/: AzureForm.vue  EdgeForm.vue  FormButton.vue  QwenForm.vue  TikTokForm.vue  WindowsForm.vue
