[package]
name = "praises"
version = "0.0.1"
description = "Praises is a text-to-speech tool that can help you read text easily."
authors = ["ElmTran"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "global-shortcut-all",
    "clipboard-all",
    "protocol-asset",
    "http-all",
    "os-all",
    "notification-all",
    "dialog-save",
    "shell-all",
    "window-all",
    "dialog-open",
    "fs-all",
    "path-all",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
log = "^0.4"
once_cell = "1.18.0"
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-runtime-wry = "0.14.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.3", features = ["default", "blocking", "json"] }
soloud = "1.0.5"
env_logger = "0.11.3"
window-shadows = "0.2.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
