[package]
name = "praises"
version = "0.1.0"
description = "Praises is a text-to-speech tool that can help you read text easily."
authors = ["ElmTran"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "system-tray",
    "global-shortcut-all",
    "clipboard-all",
    "protocol-asset",
    "http-all",
    "os-all",
    "notification-all",
    "dialog-save",
    "shell-all",
    "window-all",
    "dialog-open",
    "fs-all",
    "path-all",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
log = "^0.4"
once_cell = "1.18.0"
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-runtime-wry = "0.14.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.3", features = ["default", "blocking", "json"] }
soloud = "1.0.5"
env_logger = "0.11.3"
selection = "1.2.0"
window-shadows = "0.2.2"
uuid = "1.10.0"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = "0.3.30"
url = "2.5.2"
regex = "1.10.5"
strum_macros = "0.26.4"
strum = "0.26.3"
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
